--- a/src/app/recipes/pages/home/home.component.html
+++ b/src/app/recipes/pages/home/home.component.html
@@ -3,6 +3,7 @@
   <mat-sidenav #sidenav mode="push">
 
     <mat-toolbar color="warn">
+      <img src="../../../../assets/logo.png" class="logo">
       <span>Menú</span>
       <span class="spacer"></span>
 
