--- a/src/app/recipes/pages/listado/listado.component.html
+++ b/src/app/recipes/pages/listado/listado.component.html
@@ -1,20 +1,23 @@
-<h1>Listado de recetas</h1>
-<mat-divider></mat-divider>
-<br>
+<div class="container">
+  <h1 class="titulo">LISTADO DE RECETAS</h1>
+  <mat-divider></mat-divider>
+  <br>
 
-<div fxLayout="row wrap"
-  fxLayout.xs="column"
-  fxLayoutAlign="center"
-  fxLayoutGap="20px">
+  <div fxLayout="row wrap"
+    fxLayout.xs="column"
+    fxLayoutAlign="center"
+    fxLayoutGap="20px">
 
-  <div fxFlex="20"
-    fxFlex.lg="15"
-    fxFlez.sm="30"
-    *ngFor="let receta of recetas">
+    <div fxFlex="20"
+      fxFlex.lg="30"
+      fxFlex.sm="30"
+      *ngFor="let receta of recetas">
 
-    <app-receta-tarjeta [receta]="receta"></app-receta-tarjeta>
+      <app-receta-tarjeta [receta]="receta"></app-receta-tarjeta>
+
+    </div>
 
   </div>
-
 </div>
+
 
