--- a/src/app/recipes/components/receta-tarjeta/receta-tarjeta.component.html
+++ b/src/app/recipes/components/receta-tarjeta/receta-tarjeta.component.html
@@ -7,11 +7,6 @@
   <mat-card-subtitle><strong>Categoría: </strong>{{receta.categoria}}</mat-card-subtitle>
   <mat-card-subtitle><strong>Tiempo de preparación: </strong>{{receta.tiempoPreparacion}}</mat-card-subtitle>
 
-
-  <mat-card-content>
-    <h3>{{receta.instrucciones}}</h3>
-  </mat-card-content>
-
   <mat-card-actions>
     <button mat-button
       color="warn"
@@ -20,7 +15,7 @@
     </button>
     <button mat-button
     color="info"
-    [routerLink]="['recetas/editar/',receta.id]">>
+    [routerLink]="['/recetas/editar/',receta.id]">
       Editar
     </button>
 
