--- a/src/app/recipes/pages/agregar/agregar.component.html
+++ b/src/app/recipes/pages/agregar/agregar.component.html
@@ -1,1 +1,73 @@
-<p>agregar works!</p>
+<h1>Nueva Receta: <small>{{receta.nombre}}</small> </h1>
+<div fxLayout="row"
+      fxLayoutGap="40px"
+      fxLayout.xs="column">
+
+    <div fxFlex="50" fxLayout="column">
+      <mat-form-field fx-Flex="100" fx.Layout.xs="column">
+        <mat-label>Nombre</mat-label>
+        <input matInput
+              type="text"
+              [(ngModel)]="receta.nombre"
+              required>
+      </mat-form-field>
+
+      <mat-form-field fx-Flex="100">
+        <mat-label>Categoría</mat-label>
+        <mat-select [(ngModel)]="receta.categoria"
+                    required>
+          <mat-option *ngFor="let categoria of categorias"
+                        [value]="categoria.id">
+            {{categoria.id}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field fx-Flex="100">
+        <mat-label>Tiempo de preparación</mat-label>
+        <input matInput
+              type="text"
+              [(ngModel)]="receta.tiempoPreparacion"
+              required>
+      </mat-form-field>
+
+      <mat-form-field fx-Flex="100">
+        <mat-label>Ingredientes</mat-label>
+        <input matInput
+              type="text"
+              [(ngModel)]="receta.ingredientes"
+              required>
+      </mat-form-field>
+
+      <mat-form-field fx-Flex="100">
+        <mat-label>Instrucciones</mat-label>
+        <input matInput
+              type="text"
+              [(ngModel)]="receta.instrucciones"
+              required>
+      </mat-form-field>
+
+      <mat-form-field fx-Flex="100">
+        <mat-label>Foto Url</mat-label>
+        <input matInput
+              type="url"
+              [(ngModel)]="receta.alt_img"
+              required>
+      </mat-form-field>
+
+      <br>
+
+      <button mat-raised-button
+              color="warn"
+              (click)="guardar()">
+        <mat-icon>edit</mat-icon>
+        Guardar
+      </button>
+
+    </div>
+
+    <div fxFlex="50">
+      <img [src]="receta | imagen">
+    </div>
+
+</div>
