--- a/src/app/recipes/pages/agregar/agregar.component.html
+++ b/src/app/recipes/pages/agregar/agregar.component.html
@@ -1,73 +1,72 @@
-<h1>Nueva Receta: <small>{{receta.nombre}}</small> </h1>
-<div fxLayout="row"
-      fxLayoutGap="40px"
-      fxLayout.xs="column">
+<h1>Nueva Receta: <small>{{ receta.nombre }}</small></h1>
+<div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column">
+  <div fxFlex="50" fxLayout="column">
+    <mat-form-field fx-Flex="100">
+      <mat-label>Nombre</mat-label>
+      <input matInput type="text" [(ngModel)]="receta.nombre" required />
+    </mat-form-field>
 
-    <div fxFlex="50" fxLayout="column">
-      <mat-form-field fx-Flex="100" fx.Layout.xs="column">
-        <mat-label>Nombre</mat-label>
-        <input matInput
-              type="text"
-              [(ngModel)]="receta.nombre"
-              required>
-      </mat-form-field>
+    <mat-form-field fx-Flex="100">
+      <mat-label>Categoría</mat-label>
+      <mat-select [(ngModel)]="receta.categoria" required>
+        <mat-option *ngFor="let categoria of categorias" [value]="categoria.id">
+          {{ categoria.id }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
+    <mat-form-field fx-Flex="100">
+      <mat-label>Tiempo de preparación</mat-label>
+      <input matInput type="text" [(ngModel)]="receta.tiempoPreparacion" required />
+    </mat-form-field>
+
+    <!-- Ingredientes -->
+    <div>
       <mat-form-field fx-Flex="100">
-        <mat-label>Categoría</mat-label>
-        <mat-select [(ngModel)]="receta.categoria"
-                    required>
-          <mat-option *ngFor="let categoria of categorias"
-                        [value]="categoria.id">
-            {{categoria.id}}
-          </mat-option>
-        </mat-select>
+        <mat-label>Nuevo Ingrediente</mat-label>
+        <input matInput type="text" [(ngModel)]="nuevoIngrediente" />
       </mat-form-field>
-
-      <mat-form-field fx-Flex="100">
-        <mat-label>Tiempo de preparación</mat-label>
-        <input matInput
-              type="text"
-              [(ngModel)]="receta.tiempoPreparacion"
-              required>
-      </mat-form-field>
-
-      <mat-form-field fx-Flex="100">
-        <mat-label>Ingredientes</mat-label>
-        <input matInput
-              type="text"
-              [(ngModel)]="receta.ingredientes"
-              required>
-      </mat-form-field>
-
-      <mat-form-field fx-Flex="100">
-        <mat-label>Instrucciones</mat-label>
-        <input matInput
-              type="text"
-              [(ngModel)]="receta.instrucciones"
-              required>
-      </mat-form-field>
-
-      <mat-form-field fx-Flex="100">
-        <mat-label>Foto Url</mat-label>
-        <input matInput
-              type="url"
-              [(ngModel)]="receta.alt_img"
-              required>
-      </mat-form-field>
-
-      <br>
-
-      <button mat-raised-button
-              color="warn"
-              (click)="guardar()">
-        <mat-icon>edit</mat-icon>
-        Guardar
-      </button>
-
+      <button mat-raised-button color="primary" (click)="agregarIngrediente()">Agregar Ingrediente</button>
     </div>
+    <ul>
+      <li *ngFor="let ingrediente of receta.ingredientes; let i = index">
+        {{ ingrediente }}
+        <button mat-icon-button color="warn" (click)="eliminarIngrediente(i)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </li>
+    </ul>
 
-    <div fxFlex="50">
-      <img [src]="receta | imagen">
+    <!-- Instrucciones -->
+    <div>
+      <mat-form-field fx-Flex="100">
+        <mat-label>Nueva Instrucción</mat-label>
+        <input matInput type="text" [(ngModel)]="nuevaInstruccion" />
+      </mat-form-field>
+      <button mat-raised-button color="primary" (click)="agregarInstruccion()">Agregar Instrucción</button>
     </div>
+    <ul>
+      <li *ngFor="let instruccion of receta.instrucciones; let i = index">
+        {{ instruccion }}
+        <button mat-icon-button color="warn" (click)="eliminarInstruccion(i)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </li>
+    </ul>
 
+    <mat-form-field fx-Flex="100">
+      <mat-label>Foto Url</mat-label>
+      <input matInput type="url" [(ngModel)]="receta.alt_img" required />
+    </mat-form-field>
+
+    <br />
+    <button mat-raised-button color="warn" (click)="guardar()">
+      <mat-icon>edit</mat-icon>
+      Guardar
+    </button>
+  </div>
+
+  <div fxFlex="50">
+    <img [src]="receta | imagen">
+  </div>
 </div>
