--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .spacer{
   flex: 1 1 auto;
 }
+
+.container{
+  padding:20px
+  }
+
+img{
+    height: 221px;
+    width: 450px;
+    max-width: 100%;
+    border-radius: 5px;
+  }
