--- a/src/app/recipes/pages/agregar/agregar.component.html
+++ b/src/app/recipes/pages/agregar/agregar.component.html
@@ -1,3 +1,7 @@
+<button mat-button color="warn" (click)="regresar()">
+  <mat-icon>arrow_back</mat-icon>
+  Regresar
+</button>
 <h1>Nueva Receta: <small>{{ receta.nombre }}</small></h1>
 <div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column">
   <div fxFlex="50" fxLayout="column">
@@ -60,10 +64,24 @@
     </mat-form-field>
 
     <br />
-    <button mat-raised-button color="warn" (click)="guardar()">
-      <mat-icon>edit</mat-icon>
-      Guardar
-    </button>
+
+    <div fxLayout>
+      <button mat-raised-button color="primary" (click)="guardar()">
+        <mat-icon>edit</mat-icon>
+        Guardar
+      </button>
+
+      <span class="spacer"></span>
+
+      <button *ngIf="receta.id"
+              mat-raised-button
+              (click)="borrarReceta()"
+              color="warn">
+        <mat-icon>remove</mat-icon>
+        Borrar
+      </button>
+    </div>
+
   </div>
 
   <div fxFlex="50">
