--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,9 +1,25 @@
-<mat-grid-list cols="1">
-  <mat-grid-tile >
-    <button mat-raised-button
-            color="primary"
-            (click)="login()">
-      Ingresar
+<div class="login-container">
+  <form (ngSubmit)="login()" class="login-form">
+    <h2>Login</h2>
+
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input
+        type="email"
+        id="email"
+        [(ngModel)]="email"
+        name="email"
+        required
+        email
+      >
+    </div>
+
+    <div *ngIf="errorMessage" class="error-message">
+      {{ errorMessage }}
+    </div>
+
+    <button type="submit" class="login-button">
+      Login
     </button>
-  </mat-grid-tile>
-</mat-grid-list>
+  </form>
+</div>
